resources/css/main.css
/* ... */
/* The content section */
#content_section {
	margin: 0 auto;
	clear: both;
}
#main_content_section {
	padding: 5px 12px 16px 12px;
}

/* The footer */
#footer {
	margin: 4em 0 0 0;
	padding: 10px 5%;
	background: #3e5a78;
	border-top: 3px solid #b2b6bd;
	flex: none;
}
#footer ul {
	margin: 0;
	padding: 0;
}
#footer li, #footer p, #footer a {
	font-size: 0.9em;
	color: #fff;
}
#footerfix {
	flex: 1 0 auto;
}

/* Box-shadow only on this one. */
#wrapper {
	width: 90%;
	clear: both;
	background: #fff;
	border: 1px solid #b8b8b8;
	border-radius: 8px;
	box-shadow: 0 2px 3px rgba(0,0,0,0.14);
}

/* Set maximum width limit for content */
#top_section .inner_wrap, #wrapper, #header, #footer .inner_wrap {
	max-width: 1200px;
	margin: 0 auto;
}

/* The framing graphics */
/* The top bar. */
#top_section {
	padding: 0 5%;
	border-bottom: 1px solid #bbb;
	box-shadow: 0 1px 4px rgba(0,0,0,0.16);
	background: #fff;
	clear: both;
}
#top_section::after {
	content:"";
	display: block;
	clear: both;
}
#top_info {
	padding: 5px 0;
	line-height: 1.3em;
	width: auto;
}
#languages_form, #search_form {
	padding: 5px 0;
}

/* Menues */
/* Styles for popup windows */
.popup_container {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(40,64,80,0.5);
	z-index: 5;
}
.popup_window {
	position: relative;
	width: 480px;
	z-index: 99;
	padding: 0 6px 6px 6px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.5);
	border: 1px solid #777;
	border-radius: 7px 7px 3px 3px;
	overflow: visible !important;
	background: #fff;
	top: 15%;
	margin: 0 auto;
}
.popup_heading {
	padding: 10px 8px;
	color: #bf6900;
}
.popup_content {
	color: #222;
	line-height: 1.6em;
	max-height: 30em;
	overflow: auto;
	padding: 10px 8px;
	border: 1px solid #bbb;
	border-bottom: 1px solid #ddd;
	border-radius: 6px 6px 2px 2px;
	box-shadow: 0 -2px 3px rgba(0,0,0,0.15), 0 1px 1px rgba(255,255,255,0.2);
}
#main_menu .popup_heading, #genericmenu .popup_heading {
	display: none;
}
#genericmenu > .popup_container {
	z-index: 1;
}
#main_menu .popup_container, #genericmenu > .popup_container {
	display: block;
	position: relative;
	background: none;
	margin: 0;
}
#main_menu .popup_window, #genericmenu .popup_window {
	position: relative;
	width: auto;
	box-shadow: none;
	border: none;
	border-radius: 0;
	background: none;
	background-image: none;
	margin: 0;
	top: 0;
	padding: 0;
}
.generic_icons.hide_popup, .popup_heading .generic_icons {
	float: right;
}
.popup_heading .icon {
	vertical-align: middle;
	margin: -4px 4px 0 0;
}

/* Special Ones */
.mobile_generic_menu_u {
	float: left;
	margin: 5px 0;
}

/* Styles for the standard dropdown menus.
------------------------------------------------------- */
.dropmenu {
	position: relative;
	padding: 0;
	margin: 0;
}
/* Level 1 button background. */
.dropmenu > li {
	display: inline-block;
	margin: 0 2px 0 1px;
	font-size: 0.9em;
	line-height: 1.9em;
}
/* Disable default focus outlines */
.dropmenu a {
	outline: 0;
}
/* For cases where we want to spotlight something specific to an item, e.g. an amount */
.amt {
	margin-left: 3px;
	padding: 0 5px;
	color: #fff;
	background: #6d90ad;
	border-radius: 8px;
}
.dropmenu li .active .amt {
	background: rgba(0,0,0,0.2);
	color: inherit;
}
#top_info .top_menu.visible {
	display: block;
}
/* Needed for new PM notifications. */
.dropmenu li strong {
	color: #333;
}

.dropmenu li a {
	padding: 0 7px 0 7px;
	display: block;
	border: 1px solid transparent;
	border-radius: 4px;
}
/* Level 1 active button. */
.dropmenu li a.active {
	background: orange;
	color: #fff;
	font-weight: bold;
	border: 1px solid #f49a3a;
	box-shadow: 0 5px 5px rgba(255,255,255,0.2) inset;
	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
}
/* Level 1 hover effects. */
.dropmenu li a:hover, .dropmenu li:hover a, .dropmenu li a:focus {
	background: #597b9f;
	border: 1px solid #4a6b8c;
	color: #fff;
	cursor: pointer;
	text-decoration: none;
	box-shadow: 0 4px 4px rgba(255,255,255,0.1) inset;
	text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
}
/* Level 1 active button. */
.dropmenu li a.active:hover, .dropmenu li:hover a.active {
	background: orange;
	border: 1px solid #f49a3a;
	color: #444;
	box-shadow: 0 5px 5px rgba(255,255,255,0.2) inset;
	text-shadow: none;
}

#main_menu {
	margin: 10px 0 4px 0;
}

/* Levels 2 and 3 submenu wrapper. */
.dropmenu li ul, .top_menu {
	z-index: 90;
	position: absolute;
	display: none;
	min-width: 18.2em;
	padding: 0.5em;
	font-weight: normal;
	border: solid 1px #999;
	border-left: solid 1px #bbb;
	border-top: solid 1px #ccc;
	border-radius: 4px;
	box-shadow: 3px 3px 4px rgba(0,0,0,0.3);
	background: #fff;
	margin: 0;
	list-style: none;
}
/* Level 2 link background. */
.dropmenu li li {
	margin: 0;
	padding: 0;
	width: 17em;
	font-size: 1em;
	border-radius: 3px;
	border: 1px solid transparent;
}
/* Necessary to allow highlighting of 1st level while hovering over submenu. */
.dropmenu li:hover li a, .dropmenu li li a {
	background: none;
	padding: 0 9px;
	color: #346;
	border: none;
	line-height: 2.2em;
}
.dropmenu li li a>img {
	vertical-align: middle;
}/* Note: The next declarations are for keyboard access with js disabled. */
.dropmenu ul a:focus, .dropmenu ul ul a:focus {
	margin-left: 9990px;
	border: none;
	width: 17em;
}
.dropmenu ul ul a:focus {
	margin-left: 19950px;
}
/* Cancel those for hover and/or js access. */
.dropmenu ul li:hover a:focus, .dropmenu ul li a:focus {
	margin-left: 0;
	width: auto;
}
/* Level 3 submenu wrapper positioning. */
.dropmenu li ul ul {
	margin: -2em 0 0 15.3em;
}
/* Level 3 maintains font-size the same as Level 2. */
.dropmenu li li li a {
	font-size: 1em;
}
/* Levels 2 and 3 hover effects. */
.dropmenu li li:hover {
	border: none;
}
.dropmenu li li:hover>a, .dropmenu li li a:focus, .dropmenu li li a:hover {
	color: #333;
	text-decoration: none;
	border: 1px solid #cfcfcf;
	border-top: 1px solid #d4dee6;
}
/* ... */

